[docs/style] upload new texture files and reformat writeup doc to prevent file overflow

--- a/website/index.html
+++ b/website/index.html
@@ -470,7 +470,8 @@
 </b></blockquote>
 
 <div align="middle">
-    <img src="images/t5-custom-texture.png" align="middle" width="100%" />
+    <h2 align="center"> Wood Plank texture</h2>
+    <img src="docs/wood_texture.png" align="middle" width="100%" />
 </div>
 
 
@@ -487,38 +488,46 @@
 <div align="middle">
     <table style="width:100%">
         <tr align="center">
+            <h1 align="center"> Bump Mapping</h1>
             <td>
-                <img src="docs/p5_t4_bump_cloth_16.png" align="middle" width="400vw" />
+                <img src="docs/p5_t4_bump_cloth_16.png" align="middle" width="500vw" />
                 <figcaption>Bump Mapping on the Cloth -o 16 -a 16</figcaption>
             </td>
             <td>
-                <img src="docs/p5_t4_bump_cloth_128.png" align="middle" width="400vw" />
+                <img src="docs/p5_t4_bump_cloth_128.png" align="middle" width="500vw" />
                 <figcaption>Bump Mapping on the Cloth -o 128 -a 128</figcaption>
-            </td>
-            <td>
-                <img src="docs/p5_t4_bump_sphere_16.png" align="middle" width="400vw" />
-                <figcaption>Bump Mapping on the Sphere -o 16 -a 16</figcaption>
-            </td>
-            <td>
-                <img src="docs/p5_t4_bump_sphere_128.png" align="middle" width="400vw" />
-                <figcaption>Bump Mapping on the Sphere -o 128 -a 128</figcaption>
             </td>
         </tr>
         <tr align="center">
             <td>
-                <img src="docs/p5_t4_disp_cloth_16.png" align="middle" width="400vw" />
+                <img src="docs/p5_t4_bump_sphere_16.png" align="middle" width="500vw" />
+                <figcaption>Bump Mapping on the Sphere -o 16 -a 16</figcaption>
+            </td>
+            <td>
+                <img src="docs/p5_t4_bump_sphere_128.png" align="middle" width="500vw" />
+                <figcaption>Bump Mapping on the Sphere -o 128 -a 128</figcaption>
+            </td>
+        </tr>
+        </table>
+    <table style="width:100%">
+        <tr align="center">
+            <h1 align="center"> Displacement Mapping</h1>
+            <td>
+                <img src="docs/p5_t4_disp_cloth_16.png" align="middle" width="500vw" />
                 <figcaption>Displacement Mapping on the Cloth -o 16 -a 16</figcaption>
             </td>
             <td>
-                <img src="docs/p5_t4_disp_cloth_128.png" align="middle" width="400vw" />
+                <img src="docs/p5_t4_disp_cloth_128.png" align="middle" width="500vw" />
                 <figcaption>Displacement Mapping on the Cloth -o 128 -a 128</figcaption>
             </td>
+        </tr>
+        <tr>
             <td>
-                <img src="docs/p5_t4_disp_sphere_16.png" align="middle" width="400vw" />
+                <img src="docs/p5_t4_disp_sphere_16.png" align="middle" width="500vw" />
                 <figcaption>Displacement Mapping on the Sphere -o 16 -a 16</figcaption>
             </td>
             <td>
-                <img src="docs/p5_t4_disp_sphere_128.png" align="middle" width="400vw" />
+                <img src="docs/p5_t4_disp_sphere_128.png" align="middle" width="500vw" />
                 <figcaption>Displacement Mapping on the Sphere -o 128 -a 128</figcaption>
             </td>
             <td>
@@ -559,18 +568,6 @@
 <p>
     TODO
 </p>
-
-
-
-<h2 align="middle">Contributions</h2>
-<p>
-    Partner A worked on TODO.
-</p>
-<br />
-<p>
-    Partner B worked on TODO.
-</p>
-
 
 
 <h2 align="middle">Mesh Competition Extra Credit (optional)</h2>
