[docs] add cloth and plane intersection image and update writeup with the associated images

--- a/website/index.html
+++ b/website/index.html
@@ -317,7 +317,7 @@
 </b></blockquote>
 
 <div align="middle">
-    <img src="images/t3-shaded-cloth-at-rest.png" align="middle" width="100%" />
+    <img src="docs/plane%20resting%20on%20a%20plane.png" align="middle" width="100%" />
 </div>
 
 
@@ -325,8 +325,6 @@
 <a href="https://cs184.eecs.berkeley.edu/sp23/docs/proj4-part-4">
     <h2 align="middle">Part 4: Handling self-collisions</h2>
 </a>
-
-<h2 align="middle">Part IV: Handling self-collisions</h2>
     <blockquote>
         <b>
             Show us at least 3 screenshots that document how your cloth falls and folds on itself, starting with an early,
