[docs] add writeup portion for part 3

--- a/website/index.html
+++ b/website/index.html
@@ -306,7 +306,7 @@
 </b></blockquote>
 
 <p>
-    TODO
+    The main impact of the differing <code>ks</code> values on the sphere cloth interaction is how the cloth wraps around the sphere.  When <code>ks = 500</code>, the increased elasticity of the cloth makes the cloth wrap more tightly around the sphere.  When <code>ks = 5000</code>, the decreased elasticity leads to the cloth to wrap more loosely around the sphere.  As expected, when <code>ks = 50000</code>, the cloth is more rigid, seeming to sit more loosely atop the sphere than when <code>ks = 5000</code> and does not wrap around the sphere noticeably.
 </p>
 
 
